k8s-manifests/service.yaml
# External LoadBalancer service
apiVersion: v1
kind: Service
metadata:
  name: model-serving
  labels:
    app: model-serving
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: model-serving
---
# Internal ClusterIP service
apiVersion: v1
kind: Service
metadata:
  name: model-serving-internal
  labels:
    app: model-serving
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: model-serving
